# gpui-navigator

./: .gitignore  CLAUDE.md  Cargo.toml  NESTED_ROUTING_FIXES.md  README.md
.agents/skills/rust-idioms/: SKILL.md
.agents/skills/rust-idioms/references/: api-builder-pattern.md  api-impl-standard-traits.md  api-sealed-traits.md  conv-asref-for-flexibility.md  conv-impl-from-not-into.md  conv-inner-function-pattern.md  conv-tryfrom-for-fallible.md  err-question-mark-propagation.md  err-thiserror-for-libraries.md  err-use-result-not-panic.md  idiom-constructor-naming.md  idiom-default-trait.md  idiom-struct-update-syntax.md  iter-avoid-collect-then-iterate.md  iter-enumerate-for-indices.md  iter-filter-map-combined.md  mod-crate-prefix-imports.md  mod-pub-use-reexports.md  own-accept-borrowed-types.md  own-cow-conditional-clone.md  type-builder-required-fields.md  type-phantom-data.md  type-strong-typing-strings.md
.claude/: settings.json  settings.local.json
.claude/agents/: route-architect.md  rust-implementer.md  rust-reviewer.md  test-writer.md
.claude/rules/: nested-routing.md  rust-code-style.md  testing.md
.claude/skills/bench/: SKILL.md
.claude/skills/check/: SKILL.md
.claude/skills/doc/: SKILL.md
.claude/skills/fix-warnings/: SKILL.md
.claude/skills/gen-test/: SKILL.md
.claude/skills/rust-idioms/: AGENTS.md
.claude/skills/rust-idioms/references/: api-derive-common-traits.md  api-extension-traits.md  api-generic-bounds.md  conv-impl-deref-for-newtypes.md  err-anyhow-for-applications.md  err-option-for-absence.md  idiom-destructuring-assignment.md  idiom-let-else.md  idiom-match-guards.md  iter-prefer-iterators-over-loops.md  iter-use-collect-turbofish.md  mod-minimize-pub-api.md  mod-split-large-modules.md  mod-tests-submodule.md  own-avoid-unnecessary-clone.md  own-lifetime-elision.md  own-prefer-borrowing.md  own-return-owned-for-flexibility.md  type-newtype-invariants.md  type-newtype-units.md  type-non-exhaustive-enums.md
.claude/skills/test/: SKILL.md
.devin/: wiki.json
.specify/memory/: constitution.md
examples/: error_demo.rs  guard_demo.rs  lifecycle_demo.rs  middleware_demo.rs  nested_demo.rs  stateful_demo.rs  transition_demo.rs
specs/001-nested-routing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-nested-routing-redesign/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-nested-routing-redesign/checklists/: requirements.md
specs/001-nested-routing-redesign/contracts/: api.md
specs/001-nested-routing-redesign/research/: research.md
specs/001-nested-routing/checklists/: requirements.md
src/: cache.rs  context.rs  error.rs  guards.rs  history.rs  lib.rs  lifecycle.rs  logging.rs  matching.rs  middleware.rs  nested.rs  params.rs  resolve.rs  route.rs  state.rs  transition.rs  widgets.rs
tests/: integration_tests.rs  nested_navigation_tests.rs  nested_routing_integration_tests.rs  resolve_tests.rs  unit_tests.rs
tests/common/: mod.rs
tests/integration/: nested_routing.rs
tests/unit/: cache.rs  matching.rs  mod.rs  named_outlet_tests.rs  nested.rs  parameter_extraction_tests.rs  params.rs  path_normalization_tests.rs
upd/: ARCHITECTURE.md  context_updated.rs  resolve.rs  widgets_updated.rs
