[package]
name = "gpui-navigator"
version = "0.1.4"
edition = "2021"
rust-version = "1.75"
description = "Navigator for GPUI with transitions, nested routing, guards, and middleware"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/gpui-navigator"
homepage = "https://github.com/vanyastaff/gpui-navigator"
repository = "https://github.com/vanyastaff/gpui-navigator"
keywords = ["gpui", "navigator", "navigation", "transitions", "ui"]
categories = ["gui", "development-tools"]
authors = ["Vanya Stafford"]
exclude = [
    ".github/",
    ".idea/",
    "target/",
    "*.md",
    "!README.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Pedantic lints that are too strict for builder-pattern APIs
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_fields_in_debug = "allow"
unnecessary_literal_bound = "allow"
too_many_lines = "allow"
needless_borrows_for_generic_args = "allow"
# Dependency-related (we can't control gpui's transitive deps)
multiple_crate_versions = "allow"
# Nursery lints with false positives in GPUI context
missing_const_for_fn = "allow"
option_if_let_else = "allow"
use_self = "allow"
derive_partial_eq_without_eq = "allow"
significant_drop_tightening = "allow"
only_used_in_recursion = "allow"
# Minor optimization suggestions not worth the churn
assigning_clones = "allow"
cast_precision_loss = "allow"
suboptimal_flops = "allow"
# API compatibility (GPUI requires &mut for context params)
needless_pass_by_ref_mut = "allow"
# Hex color literals (0xRRGGBB is standard in UI code)
unreadable_literal = "allow"

[dependencies]
gpui = "0.2"

# Optional dependencies
lru = { version = "0.16", optional = true }
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }

[features]
default = ["log", "guard", "middleware", "cache", "transition"]
# Core features
guard = []
middleware = []
transition = []
# Optional LRU cache for route resolution
cache = ["dep:lru"]
# Logging backend - choose one (mutually exclusive)
log = ["dep:log"]
tracing = ["dep:tracing"]

[dev-dependencies]
gpui = { version = "0.2", features = ["test-support"] }
env_logger = "0.11"
tokio = { version = "1", features = ["rt", "macros"] }

[[example]]
name = "transition_demo"
path = "examples/transition_demo.rs"
