[package]
name = "gpui-navigator"
version = "0.1.4"
edition = "2021"
rust-version = "1.75"
description = "Navigator for GPUI with transitions, nested routing, guards, and middleware"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/gpui-navigator"
homepage = "https://github.com/vanyastaff/gpui-navigator"
repository = "https://github.com/vanyastaff/gpui-navigator"
keywords = ["gpui", "navigator", "navigation", "transitions", "ui"]
categories = ["gui", "development-tools"]
authors = ["Vanya Stafford"]
exclude = [
    ".github/",
    ".idea/",
    "target/",
    "*.md",
    "!README.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Dependency-related (we can't control gpui's transitive deps)
multiple_crate_versions = "allow"

[dependencies]
gpui = "0.2"

# Optional dependencies
lru = { version = "0.16", optional = true }
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }

[features]
default = ["log", "guard", "middleware", "cache", "transition"]
# Core features
guard = []
middleware = []
transition = []
# Optional LRU cache for route resolution
cache = ["dep:lru"]
# Logging backend - choose one (mutually exclusive)
log = ["dep:log"]
tracing = ["dep:tracing"]

[dev-dependencies]
gpui = { version = "0.2", features = ["test-support"] }
env_logger = "0.11"
tokio = { version = "1", features = ["rt", "macros"] }

[[example]]
name = "transition_demo"
path = "examples/transition_demo.rs"
